syntax = "proto3";
package prism.pgov;

import "gogoproto/gogo.proto";
import "prism/pgov/params.proto";
import "prism/pgov/proposal.proto";
import "prism/pgov/staked_p_asset.proto";
import "prism/pgov/vote.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/prism-finance/prism-core/x/pgov/types";

// GenesisState defines the pgov module's genesis state.
message GenesisState {
  Params params = 1 [(gogoproto.nullable) = false];
  repeated StakedPAsset staked_p_asset_list = 2 [(gogoproto.nullable) = false];
  repeated Proposal proposal_list = 3 [(gogoproto.nullable) = false];
  repeated Vote vote_list = 4 [(gogoproto.nullable) = false];
  // this line is used by starport scaffolding # genesis/proto/state
}
